# conan_qt_printer

./: CMakeLists.txt  Makefile  README.md  Readme.md  conan_python_scripts.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_conan.cbp  qt_conan_de_DE.ts
